[package]
name = "native"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
name = "equihash_node_binding"
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b_simd = "1.0.2"
byteorder = "1.5.0"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6"]
